facebook add-on

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <li></li>
             <li><a class="nav__link" href="index.html">Początek</a></li>
             <li><a class="nav__link" href="about.html">O Nas</a></li>
-            <li><a class="nav__link" href="blog.html">Aktualności</a></li>
+            <li><a class="nav__link" href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a></li>
             <li><a class="nav__link" href="pricing.html">Cennik</a></li>
             <li><a class="nav__link" href="contact.html">Kontakt</a></li>
         </ul>
@@ -37,7 +37,7 @@
 <nav class="nav nav-desktop">
     <a class="nav__link" href="index.html">Strona główna</a>
     <a class="nav__link" href="about.html">O nas</a>
-    <a class="nav__link" href="blog.html">Aktualności</a>
+    <a class="nav__link" href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a>
     <a class="nav__link" href="pricing.html">Cennik-Grafik-Karta-Podarunkowa</a>
     <a class="nav__link" href="contact.html">Kontakt-Zapisy</a>
 </nav>
