facebook site add-on

--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
         <section class="mb-4">
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img
                     alt="icon-yt" src="images/yt.png"></img></i></a>
-            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/"
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/taniec.siedlce.new2023"
                role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
                role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
