--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             nowych wydarzeniach
                         <p style="color:azure">.</p> </p>
                         <div class="mt-3">
-                            <a href="http://localhost:63342/Dance-School-Website/about.html?_ijt=qkd30gfaheatd0hrqstjmfj5a7&_ij_reload=RELOAD_ON_SAVE" class="text-custom">Aktualności<i
+                            <a href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr" class="text-custom">Aktualności<i
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
@@ -495,7 +495,7 @@
         <section class="mb-4">
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img
                     alt="icon-yt" src="images/yt.png"></img></i></a>
-            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/"
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/taniec.siedlce.new2023"
                role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
                role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
