--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description" content="Siedlecka Szkoła Tańca Marka Glinki">
