--- a/index.html
+++ b/index.html
@@ -509,5 +509,14 @@
     </p>
 </div>
 <script src="script.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GVGBGQLSRD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GVGBGQLSRD');
+</script>
 </body>
 </html>
