HTML: Tik-Tok link

--- a/about.html
+++ b/about.html
@@ -169,6 +169,8 @@
                role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
                role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.tiktok.com/@marekglinka_taniec"
+               role="button"><img alt="icon-tiktok" src="images/tiktok.png"></img></a>
         </section>
     </div>
 </footer>
