--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,9 @@
             <li></li>
             <li><a class="nav__link" href="index.html">Początek</a></li>
             <li><a class="nav__link" href="about.html">O Nas</a></li>
-            <li><a class="nav__link" href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a></li>
+            <li><a class="nav__link"
+                   href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a>
+            </li>
             <li><a class="nav__link" href="pricing.html">Cennik</a></li>
             <li><a class="nav__link" href="contact.html">Kontakt</a></li>
         </ul>
@@ -37,7 +39,8 @@
 <nav class="nav nav-desktop">
     <a class="nav__link" href="index.html">Strona główna</a>
     <a class="nav__link" href="about.html">O nas</a>
-    <a class="nav__link" href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a>
+    <a class="nav__link"
+       href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a>
     <a class="nav__link" href="pricing.html">Cennik-Grafik-Karta-Podarunkowa</a>
     <a class="nav__link" href="contact.html">Kontakt-Zapisy</a>
 </nav>
@@ -117,6 +120,8 @@
                role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
                role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.tiktok.com/@marekglinka_taniec"
+               role="button"><img alt="icon-tiktok" src="images/tiktok.png"></img></a>
         </section>
     </div>
 </footer>
