--- a/pricing.html
+++ b/pricing.html
@@ -80,7 +80,6 @@
         </div>
     </div>
 </section>
-
 <footer class="text-center text-white" style="background-color:white;">
     <div class="container p-4">
         <section class="mb-4">
@@ -90,6 +89,8 @@
                role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
                role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.tiktok.com/@marekglinka_taniec"
+               role="button"><img alt="icon-tiktok" src="images/tiktok.png"></img></a>
         </section>
     </div>
 </footer>
