--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <nav class="nav nav-desktop">
     <a class="nav__link" href="index.html">Strona główna</a>
     <a class="nav__link" href="about.html">O nas</a>
-    <a class="nav__link" href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a>
+    <a class="nav__link" href="https://taniec-siedlce.blogspot.com/">Aktualności</a>
     <a class="nav__link" href="pricing.html">Cennik-Grafik-Karta-Podarunkowa</a>
     <a class="nav__link" href="contact.html">Kontakt-Zapisy</a>
 </nav>
@@ -478,12 +478,10 @@
 <section id="links">
     <div class="container">
         <div>
-            <h1>Przydatne linki</h1>
-        </div>
-        <h2 class="text-muted">Agencja Artystyczna GlinkaArt</h2>
+            <h1>Linki Glinki</h1>
         <hr>
-        <a href="http://marekglinka.blogspot.com/" class="text-muted">GLINKA-ART</a> <br>
-        <a href="https://taniec-siedlce.blogspot.com/" class="text-muted">Taniec - Siedlce </a> <br>
+        <a href="http://marekglinka.blogspot.com/" class="text-muted">Agencja artystyczna GLINKA-ART</a> <br>
+        <a href="https://taniec-siedlce.blogspot.com/" class="text-muted">Blog</a> <br>
         <a href="https://glinka-art.blogspot.com/" class="text-muted">Fotografia</a>
     </div>
 </section>
