--- a/pricing.html
+++ b/pricing.html
@@ -44,15 +44,14 @@
 </nav>
 
 <header class="p-5">
-    <h1 class="display-3 text-center">Cennik i grafik</h1>
+    <h1 class="display-3 text-center">Cennik i grafik zajęć tanecznych</h1>
     <p class="display-5 text-muted text-center">Tutaj znajdziesz naszą ofertę</p>
 </header>
 
 <section id="propositions">
-    <h1>Sprawdź nasze ceny!</h1>
     <div class="buttonspotify">
         <a href="https://docs.google.com/document/d/1WVXSFIjizKTK9y2MOPz182KBi6vnJfx2UXPr2FgjtOA/edit?usp=sharing">
-            <button type="button" class="btn btn-outline-light">Pobierz Cennik/Grafik</button>
+            <button type="button" class="btn btn-outline-light">Aktualne kursy / Cennik /  Grafik</button>
         </a>
     </div>
 </section>
@@ -74,7 +73,7 @@
                     <p>Karta Podarunkowa to oryginalny prezent „zapakowany” w elegancki sposób. Z pewnością dostarczy
                         wiele przyjemności i wyzwoli emocje. Być może to właśnie jest marzeniem osoby, której chcesz
                         sprawić prezent. Obdarowana osoba może skorzystać z dowolnego kursu lub lekcji
-                        indywidualnych. </p>
+                        indywidualnych. <a href="contact.html">Kontakt</a></p>
                 </div>
             </div>
         </div>
