--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li></li>
             <li><a class="nav__link" href="index.html">Początek</a></li>
             <li><a class="nav__link" href="about.html">O Nas</a></li>
-            <li><a class="nav__link" href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr">Aktualności</a></li>
+            <li><a class="nav__link" href="https://taniec-siedlce.blogspot.com/">Aktualności</a></li>
             <li><a class="nav__link" href="pricing.html">Cennik</a></li>
             <li><a class="nav__link" href="contact.html">Kontakt</a></li>
         </ul>
@@ -75,7 +75,7 @@
                             nowych wydarzeniach
                         <p style="color:azure">.</p> </p>
                         <div class="mt-3">
-                            <a href="https://www.facebook.com/story.php?story_fbid=136224902877708&id=100094705967352&paipv=0&eav=AfY36c7Eg2X17ZTOZfVWTzN5ZoyWsTFqVIua7xBzcpuTH962WQZ1mjpBhjFhy0a0O2Q&_rdr" class="text-custom">Aktualności<i
+                            <a href="https://taniec-siedlce.blogspot.com/" class="text-custom">Aktualności<i
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
@@ -470,6 +470,7 @@
                         wiele przyjemności i wyzwoli emocje. Być może to właśnie jest marzeniem osoby, której chcesz
                         sprawić prezent. Obdarowana osoba może skorzystać z dowolnego kursu lub lekcji
                         indywidualnych. </p>
+                    <a class="btn btn-outline-light" href="contact.html">Kontakt</a>
                 </div>
             </div>
         </div>
