--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="card-service-wrapper rounded border-0 shadow p-4">
                     <div class="content mt-4">
                         <h2 class="title">Zobacz nasze kursy i efekty!</h2>
-                        <p class="text-muted mt-3 mb-0">Wybierz swój taniec i sprawdź aktualności, by dowiedzieć o
+                        <p class="text-muted mt-3 mb-0">Wybierz swój taniec i koniecznie sprawdź aktualności, by dowiedzieć o
                             nowych wydarzeniach
                         <p style="color:azure">.</p> </p>
                         <div class="mt-3">
