--- a/404.html
+++ b/404.html
@@ -17,10 +17,10 @@
     <section id="contact">
         <div class="container" style="display: flex; align-items: center; justify-content: center; justify-items: center; flex-direction: column; padding: 100px;">
             <img style="text-align:  center; justify-content:center;" src="images/dancing-person.gif" alt="dancingGIF">
-            <h2 class="text-center text-uppercase">404</h2>
+            <h1 class="text-center text-uppercase">404</h1>
             <br>
-            <h3 class="text-center text-uppercase">nie ma takiego tańca</h3>
-            <p class="text-center w-75 m-auto"> Ani strony :(</p>
+            <h2 class="text-center text-uppercase">nie ma takiego tańca</h2>
+            <p class="text-center w-75 m-auto"> Ani strony ☹️ </p>
             <br>
             <a class="btn btn-outline-dark" href="index.html">Powrót</a>
         </div>
