--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
 <section id="glinkaart">
     <img class="circle" src="images/14711298_10209072110792835_8288414450548212131_o.jpg" alt="photo">
-    <h1 class="display-2">Siedlecka Szkoła Tańca Towarzyskiego </h1>
-    <h1 class="display-2 awesome_p">Marka Glinki</h1>
+    <h1 class="display-2">Siedlecka Szkoła Tańca Towarzyskiego <br> Marka Glinki </h1>
+
     <br>
     <a href="#arrowLink"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="..."
                              style="width: 100px; height:100px;"></a>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
-                        <h2 class="display-2">Pierwszy taniec?</h2>
+                        <h3 class="display-2">Pierwszy taniec?</h3>
                         <p>Warto wcześniej pomyśleć o tym i poświecić trochę czasu na <b>naukę tańca</b>. Prywatne
                             lekcje tańca umożliwią Wam naukę dowolnie wybranego tańca. Nauka tańca pozwoli Wam opanować
                             wybrany taniec lub grupę tańców w sposób możliwie optymalny. To Wy decydujecie z jaką
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="p-1">
-                        <h2 class="display-4">Dla par i singli...</h2>
+                        <h3 class="display-4">Dla par i singli...</h3>
                         <p>
                             Umiejętności nabyte na kursie pozwolą Ci poczuć się znacznie swobodniej i atrakcyjniej na
                             każdej imprezie tanecznej. W szybki i efektowny sposób rozruszasz całe ciało i nabierzesz
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
-                        <h2 class="display-4">Lekcje Indywidualne</h2>
+                        <h3 class="display-4">Lekcje Indywidualne</h3>
                         <p>
                             Indywidualne lekcje tańca adresowane są do osób, które nie mogą lub nie chcą uczestniczyć w
                             grupowych zajęcia kursu. Program zajęć dostosowany jest do oczekiwań uczestników - uczone są
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="p-1">
-                        <h2 class="display-4">Dla Dzieci</h2>
+                        <h3 class="display-4">Dla Dzieci</h3>
                         <p>
                             Zajęcia prowadzone z myślą o najmłodszych, które na zajęciach ćwiczą nie tylko kroki, lecz
                             także poprawiają swoją sprawność ruchową, koordynację, muzykalność oraz przełamują barierę
@@ -228,7 +228,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
-                        <h2 class="display-4">Ladies Latino Solo</h2>
+                        <h3 class="display-4">Ladies Latino Solo</h3>
                         <p>
                             Zapisz się na Ladies Latino Solo. Są to zajęcia stworzone specjalnie dla kobiet. Gorące rytmy
                             muzyki latynoamerykańskiej sprawią, że nogi same porwą Cię do tańca! Skorygujesz postawę,
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="p-1">
-                        <h2 class="display-4">DLA SENIORÓW 60+</h2>
+                        <h3 class="display-4">DLA SENIORÓW 60+</h3>
                         <p>
                             Taniec to także forma terapii i środek antydepresyjny. Dlatego jest świetną formą aktywności
                             fizycznej dla seniorów. Nie patrz w kalendarz i nie poddawaj się ogólnie panującej opinii,
@@ -275,7 +275,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
-                        <h2 class="display-4">Oferta dla firm</h2>
+                        <h3 class="display-4">Oferta dla firm</h3>
                         <p>
                             Chcecie zbudować silny i dynamiczny zespół? Zbudować bliskie relacje między pracownikami?
                             Proponujemy zajęcia taneczne. Poprzez wyjątkowe i niepowtarzalną formę ruchu zwiększy się
@@ -296,7 +296,7 @@
         <div class="row justify-content-center">
             <div class="col-12">
                 <div class="section-title text-center mb-4 pb-2">
-                    <h1 class="title mb-4 display-3 text-danger">Szukaliście w wyszukiwarce tych tańców?</h1>
+                    <h2 class="title mb-4 display-3 text-danger">Szukaliście w wyszukiwarce tych tańców?</h2>
                 </div>
             </div>
         </div>
@@ -378,7 +378,7 @@
 </section>
 
 <section id="propositions">
-    <h1>Nie masz pomysłu na pierwszy taniec? - Doradzimy!</h1>
+    <h2 class="text-light">Nie masz pomysłu na pierwszy taniec? - Doradzimy!</h2>
     <div class="buttonspotify">
         <a href="https://www.youtube.com/playlist?list=PL9aeB_Gtt1gPXwgtjm17vWXI1YyW0dWW4">
             <button type="button" class="btn btn-outline-light">Zobacz nasze propozycje!</button>
@@ -389,7 +389,7 @@
 
 <section id="testimonial-slider" class="k py-5">
     <div class="container">
-        <h1 class="text-center">Co sądzą Nasi kursanci?</h1>
+        <h2 class="text-center">Co sądzą Nasi kursanci?</h2>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -479,7 +479,7 @@
 <section id="links">
     <div class="container">
         <div>
-            <h1>Linki Glinki</h1>
+            <h2>Linki Glinki</h2>
         <hr>
         <a href="http://marekglinka.blogspot.com/" class="text-muted">Agencja artystyczna GLINKA-ART</a> <br>
         <a href="https://taniec-siedlce.blogspot.com/" class="text-muted">Blog</a> <br>
