--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
-    <meta name="description" content="Skontaktuj się z nami i zapisz się na kurs!">
+    <meta name="description" content="Skontaktuj się z nami przez formularz i zapisz się na kurs jeszcze dzisiaj! - Siedlecka Szkoła Tańca Towarzyskiego Marka Glinki">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -48,7 +48,7 @@
 
 <section id="contact">
     <div class="container">
-        <h3 class="text-center text-uppercase">Skontaktuj się z nami i zapisz się na kurs!</h3>
+        <h1 class="text-center text-uppercase">Skontaktuj się z nami i zapisz się na kurs!</h1>
         <hr>
         <p class="text-center w-75 m-auto"></p>
         <div id="details" class="row">
