Meta Tags change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
-    <meta name="description" content="Siedlecka Szkoła Tańca Marka Glinki">
+    <meta name="description" content="Siedlecka Szkoła Tańca Marka Glinki - Dzięki nam pokochasz taniec! Zobacz nasze kursy i efekty! Wybierz swój taniec i koniecznie sprawdź aktualności, by dowiedzieć o nowych wydarzeniach.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
