--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description"
-          content="Okres naszej działalności rozpoczął się w 1997. Zapraszamy, jeżeli usługi, których szukasz to taniec użytkowy, towarzyski, latino, disco w parach, bachata, salsa, zajęcia taneczne dla dzieci, młodzieży i dorosłych - dla par i singli w różnym stopniu zaawansowania.">
+          content="Okres naszej działalności rozpoczął się w 1997. Od tego czasu zgromadziliśmy ogromne portfolio zadowolonych kursantów. Zapraszamy, jeżeli usługi, których szukasz to taniec w różnym stopniu zaawansowania to zapraszamy!">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
