--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5"><img class="img-fluid"
-                                          src="images/Dla Firm -Ania i Marek 1920x1080+logo+zapraszamy.jpg" alt="..."/>
+                                          src="images/dlafirmmm.jpg" alt="..."/>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
