--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description" content="Siedlecka Szkoła Tańca Marka Glinki - Dzięki nam pokochasz taniec! Zobacz kursy i efekty! Wybierz taniec i sprawdź aktualności!">
+    
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Siedlecka Szkoła Tańca Towarzyskiego">
+    <meta property="og:description" content="Siedlecka Szkoła Tańca Marka Glinki - Dzięki nam pokochasz taniec! Zobacz kursy i efekty! Wybierz taniec i sprawdź aktualności!">
+    <meta property="og:image" content="images/szkolatanca.jpg">
+    <meta property="og:url" content="https://taniecsiedlce.com">
+    <meta property="og:type" content="website">
+    
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -20,6 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
+
 
 <body>
 <section id="sideNav">
