--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,7 @@
             <li></li>
             <li><a class="nav__link" href="index.html">Początek</a></li>
             <li><a class="nav__link" href="about.html">O Nas</a></li>
-            <li><a class="nav__link"
-                   href="https://taniec-siedlce.blogspot.com/">Aktualności</a>
+            <li><a class="nav__link" href="https://taniec-siedlce.blogspot.com/">Aktualności</a>
             </li>
             <li><a class="nav__link" href="pricing.html">Cennik</a></li>
             <li><a class="nav__link" href="contact.html">Kontakt</a></li>
@@ -39,12 +38,10 @@
 <nav class="nav nav-desktop">
     <a class="nav__link" href="index.html">Strona główna</a>
     <a class="nav__link" href="about.html">O nas</a>
-    <a class="nav__link"
-       href="https://taniec-siedlce.blogspot.com/">Aktualności</a>
+    <a class="nav__link" href="https://taniec-siedlce.blogspot.com/">Aktualności</a>
     <a class="nav__link" href="pricing.html">Cennik-Grafik-Karta-Podarunkowa</a>
     <a class="nav__link" href="contact.html">Kontakt-Zapisy</a>
 </nav>
-
 
 <section id="contact">
     <div class="container">
@@ -55,7 +52,7 @@
             <article class="col-12 col-lg-4">
                 <img height="50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
                 <h2>Numer Kontaktowy</h2>
-                <a href="tel:601991189 "
+                <a href="tel:601991189"
                    style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic; color: black; text-decoration: none;">
                     601 991 189
                 </a>
@@ -80,7 +77,7 @@
             <form action="POST" data-netlify="true">
                 <div class="half">
                     <div class="item">
-                        <label for="name">IMIĘ</label>
+                        <label for="first_name">IMIĘ</label>
                         <input name="IMIĘ" placeholder="Twoje Imię" type="text" id="first_name">
                     </div>
                     <div class="item">
@@ -99,13 +96,28 @@
                     </div>
                 </div>
                 <div class="full">
-                    <label for="message">WIADOMOŚĆ</label>
-                    <textarea placeholder="Twoja Wiadomość" name="Wiadomość" id="message"></textarea>
+                    <label for="target">Docelowe zajęcia, które mnie interesują</label>
+                    <select id="target" name="target" required style="padding:10px">
+                        <option value="" selected>Proszę wybrać</option>
+                        <option value="Taniec dla par">Taniec dla par</option>
+                        <option value="Pierwszy Taniec">Pierwszy Taniec</option>
+                        <option value="Taniec solo">Taniec solo</option>
+                        <option value="Warsztaty tańca">Warsztaty tańca</option>
+                        <option value="Zajęcia Grupowe">Zajęcia Grupowe</option>
+                    </select>
                 </div>
-                <div class="field">
-                    <div data-netlify-recaptcha="true" class="p-3 d-flex justify-content-center"
-                         style="text-align: center;"></div>
+
+                <div class="full">
+                    <label for="target">Mój stopień zaawansowania w tańcu</label>
+                    <select id="target" name="target" required style="padding:10px">
+                        <option value="" selected>Proszę wybrać</option>
+                        <option value="Brak">Brak</option>
+                        <option value="Początkujący">Początkujący</option>
+                        <option value="Średni">Średni</option>
+                        <option value="Wysoki">Wysoki</option>
+                    </select>
                 </div>
+
                 <input class="btn btn-outline-dark" type="submit" value="Wyślij" name="Submit"></input>
             </form>
         </div>
@@ -115,7 +127,7 @@
     <div class="container p-4">
         <section class="mb-4">
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img
-                    alt="icon-yt" src="images/yt.png"></img></i></a>
+                    alt="icon-yt" src="images/yt.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/taniec.siedlce.new2023"
                role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
