HTML: Form Selectors Styling

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="full">
                     <label for="target">Docelowe zajęcia, które mnie interesują</label>
-                    <select id="target" name="target" required style="padding:10px">
+                    <select id="target" name="target" required style="padding:10px; width: 20rem;">
                         <option value="" selected>Proszę wybrać</option>
                         <option value="Taniec dla par">Taniec dla par</option>
                         <option value="Pierwszy Taniec">Pierwszy Taniec</option>
@@ -106,10 +106,9 @@
                         <option value="Zajęcia Grupowe">Zajęcia Grupowe</option>
                     </select>
                 </div>
-
                 <div class="full">
                     <label for="target">Mój stopień zaawansowania w tańcu</label>
-                    <select id="target" name="target" required style="padding:10px">
+                    <select id="target" name="target" required style="padding:10px; width: 20rem;">
                         <option value="" selected>Proszę wybrać</option>
                         <option value="Brak">Brak</option>
                         <option value="Początkujący">Początkujący</option>
