HTML: Forms + compName change

--- a/contact.html
+++ b/contact.html
@@ -99,17 +99,24 @@
                     <label for="target">Docelowe zajęcia, które mnie interesują</label>
                     <select id="target" name="target" required style="padding:10px; width: 20rem;">
                         <option value="" selected>Proszę wybrać</option>
-                        <option value="Taniec dla par">Taniec dla par</option>
+                        <option value="Indywidualne zajęcia">Indywidualne zajęcia</option>
                         <option value="Pierwszy Taniec">Pierwszy Taniec</option>
-                        <option value="Taniec solo">Taniec solo</option>
-                        <option value="Warsztaty tańca">Warsztaty tańca</option>
-                        <option value="Zajęcia Grupowe">Zajęcia Grupowe</option>
+                        <option value="Taniec dla par - taniec użytkowy">Taniec dla par - taniec użytkowy</option>
+                        <option value="Taniec dla par - taniec latino">Taniec dla par - taniec latino</option>
+                        <option value="Taniec dla par - taniec towarzyski">Taniec dla par - taniec towarzyski</option>
+                        <option value="Taniec dla singli">Taniec dla singli</option>
+                        <option value="Latino solo">Latino solo</option>
+                        <option value="Grupowe warsztaty tańca">Grupowe warsztaty tańca</option>
+                        <option value="Projekty taneczne dla firm">Projekty taneczne dla firm</option>
+                        <option value="Pokazy tańca">Pokazy tańca</option>
+                        <option value="Karta podarunkowa">Karta podarunkowa</option>
                     </select>
                 </div>
                 <div class="full">
                     <label for="target">Mój stopień zaawansowania w tańcu</label>
-                    <select id="target" name="target" required style="padding:10px; width: 20rem;">
+                    <select id="target" name="target" style="padding:10px; width: 20rem;">
                         <option value="" selected>Proszę wybrać</option>
+                        <option value="Nie dotyczy">Nie dotyczy</option>
                         <option value="Brak">Brak</option>
                         <option value="Początkujący">Początkujący</option>
                         <option value="Średni">Średni</option>
@@ -136,9 +143,9 @@
         </section>
     </div>
 </footer>
-<div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
-    <p id="compName" class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
-                                                                                     class="text-light btn-outline-light">JR</a>
+<div id="compName" class="text-center">
+    <p>© <span class="footer__year"></span> GlinkaArt | <a href="https://www.inko-cms.pl/"
+                                                                                     class="text-dark btn-outline-light">INKO-CMS</a>
     </p>
 </div>
 <script src="script.js"></script>
