--- a/pricing.html
+++ b/pricing.html
@@ -94,9 +94,10 @@
         </section>
     </div>
 </footer>
-<div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
-    <p id="compName" class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
-                                                                       class="text-light btn-outline-light">JR</a></p>
+<div id="compName" class="text-center">
+    <p>© <span class="footer__year"></span> GlinkaArt | <a href="https://www.inko-cms.pl/"
+                                                                                     class="text-dark btn-outline-light">INKO-CMS</a>
+    </p>
 </div>
 
 
