HTML: Contact Label change

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="full">
-                    <label for="target">Docelowe zajęcia, które mnie interesują</label>
+                    <label for="target">Temat Wiadomości | Docelowe zajęcia, które mnie interesują</label>
                     <select id="target" name="target" required style="padding:10px; width: 20rem;">
                         <option value="" selected>Proszę wybrać</option>
                         <option value="Indywidualne zajęcia">Indywidualne zajęcia</option>
