HTML: Long Form message

--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,10 @@
                     </div>
                 </div>
                 <div class="full">
+                    <label for="message">WIADOMOŚĆ</label>
+                    <textarea placeholder="Twoja Wiadomość" name="Wiadomość" id="message"></textarea>
+                </div>
+                <div class="full">
                     <label for="target">Temat Wiadomości | Docelowe zajęcia, które mnie interesują</label>
                     <select id="target" name="target" required style="padding:10px; width: 20rem;">
                         <option value="" selected>Proszę wybrać</option>
