HTML: tags styling

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                 <img height="50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
                 <h2>Numer Kontaktowy</h2>
                 <a href="tel:601991189"
-                   style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic; color: black; text-decoration: none;">
+                   style="color: black; text-decoration: none;">
                     601 991 189
                 </a>
             </article>
@@ -61,7 +61,7 @@
                 <img height="50px" width="50px" src="images/iconmonstr-paper-plane-7-120.png" alt="ikonka"
                      title="ikonka">
                 <h2>E - MAIL</h2>
-                <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
+                <p style="color: black; text-decoration: none;">
                     taniecsiedlce@gmail.com
                 </p>
             </article>
@@ -69,7 +69,7 @@
                 <img height="50px" width="50px" src="images/iconmonstr-navigation-9-120.png" alt="ikonka"
                      title="ikonka">
                 <h2>Adres</h2>
-                <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
+                <p style="color: black; text-decoration: none;">
                     Siedlce, DH Olimp, ul. Sokołowska 47, III piętro,<br>
                     Węgrów, Węgrowski Ośrodek Kultury, ul. Mickiewicza 4<br>
                 </p>
